--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Karla:wght@400;800&family=Montserrat:wght@300;400;700&family=Mulish:wght@200;300;400;500&display=swap"
             rel="stylesheet"
         />
+        <link rel="icon" type="image/x-icon" href="/logo.png" />
         <title>Chấm điểm</title>
     </head>
     <body>
